--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,7 @@ VITE_APP_CHAIN='bscTest'
 
 ### base api
 # 开发环境
-VITE_APP_BASE_API='http://127.0.0.1:8099/'
+VITE_APP_BASE_API='https://sparkfire.space/'
 # 测试环境
 # VITE_APP_BASE_API='https://meta.aisclub.fun/'
 
