--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,8 @@ VITE_APP_CHAIN='bscTest'
 
 ### base api
 # 开发环境
-VITE_APP_BASE_API='https://sparkfire.space/'
+VITE_APP_BASE_API='http://192.168.1.28:8099/'
+# VITE_APP_BASE_API='https://sparkfire.space/'
 # 测试环境
 # VITE_APP_BASE_API='https://meta.aisclub.fun/'
 
